--- a/src/Components/projects.module.scss
+++ b/src/Components/projects.module.scss
@@ -5,16 +5,10 @@ a {
 .container {
   display: flex;
   margin-top: 7.5rem;
-  // grid-template-columns: repeat(8, 1fr);
-  // grid-template-rows: repeat(8, 1fr);
   height: 100vh;
   align-items: center;
   justify-content: center;
   width: 100vw;
-}
-
-.cardLink {
-  display: contents;
 }
 
 .card {
@@ -25,17 +19,19 @@ a {
   height: auto;
   width: auto;
   border-radius: 1rem;
-  // grid-column: 3 / span 2;
-  // grid-row: 3 / span 4;
+  -webkit-box-shadow: 0 5px 10px rgba(9, 25, 90, 0.2);
   box-shadow: 0 5px 10px rgba(9, 25, 90, 0.2);
   transition: box-shadow 0.2s ease, transform 0.2s ease;
 
   &:hover {
+    -webkit-box-shadow: 0 5px 10px rgba(9, 25, 90, 0.05),
+      0 15px 40px rgba(11, 28, 93, 0.2);
     box-shadow: 0 5px 10px rgba(9, 25, 90, 0.05),
       0 15px 40px rgba(11, 28, 93, 0.2);
   }
 
   &:active {
+    -webkit-transform: scale(0.98);
     transform: scale(0.98);
   }
 }
@@ -57,18 +53,21 @@ a {
   border-radius: 0 0 0.5rem 0.5rem;
 }
 
-@media screen and (max-width: 375px) {
+@media (max-width: 414px) {
   .container {
     flex-direction: column;
     align-items: center;
-    margin-top: 0;
     min-height: 100%;
     padding-top: 1rem;
 
     .card {
-      margin-bottom: 4rem;
+      margin: 0 0.5rem 4rem 0.5rem;
       .image {
-        width: 325px;
+        width: 400px;
+      }
+
+      .todo {
+        margin-top: 7.5rem;
       }
 
       .description {
@@ -79,7 +78,7 @@ a {
 }
 
 // Tablet
-@media screen and (max-width: 1024px) {
+@media (min-width: 415px) and (max-width: 1750px) {
   .container {
     height: 100%;
     flex-direction: column;
